--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "electron-updater": "^6.3.9"
+    "electron-updater": "^6.3.9",
+    "react-router": "^7.8.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
