--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "electron-updater": "^6.3.9",
-    "react-router": "^7.8.2"
+    "react-router": "^7.8.2",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
